--- a/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7 pro/realme-7-pro.html
@@ -43,7 +43,7 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Realsed on</strong>
+          <strong>Released on</strong>
           <p>2020 September 01</p>
         </div>
         <div class="specs_info">
