--- a/limbo/affiliate/templates/mobile/realme/realme 7i/realme-7i.html
+++ b/limbo/affiliate/templates/mobile/realme/realme 7i/realme-7i.html
@@ -1,41 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme 7 price in India may be Rs 13,999 and its release date may be 2020 september 1. This smartphone comes with single variants like 6/64GB RAM. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Realme 7, Realme 7 specification, Realme 7 release date, Realme 7 price, Realme 7 price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Realme 7i price in India start from Rs. 44,990 ( Expected Price ) and Realme 7i expected release date is 2020 November 20. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Realme 7i, Realme 7i specification, Realme 7i release date, Realme 7i price, Realme 7i price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Realme 7 price in india, specification and features - hipein{% endblock title%}
+    {% block title%}Realme 7i price in india, specification, Release date and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme 7 : 6/64 GB for Rs 13,999 Read Full review.</h1>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme 7i (8/128 GB) price in india, Release date, specification and features.</h1>
+          <h4 style="font-weight: 400;">Here Rumours comes out  Realme is about to launch its new smartphone, Realme 7i soon. </h4>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/realme/realme-7-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/realme/realme-7i-2.jpg'%}" alt="">
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">MySmartPrice</a></p>
         <div class="info">
-          <h2 style="font-weight: 400;">About Realme 7</h2>
-          <p>Realme is now going to launch a new smartphone, takes it's series one step further, its name is Realme 7. <b>Realme 7</b> smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an 	Octa-core  (2.05 GHz, Dual core, Cortex A76 + 2 GHz, Hexa Core, Cortex A55) processor and it runs on MediaTek Helio G90T Chipset. </p>
-          <p>Realme 7 smartphone has an IPS LCD display with 1080 x 2400 Pixels screen resolution and 395 PPI pixel density. Talking about its camera, On the front camera, you get a 16-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixel micro and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for 30W fast charging and non-removable 5000 mAh battery. </p>
-          <h3 style="font-weight: 400;">Realme 7 price in India.</h3>
-          <p>Realme 7 price in India start from Rs 13,999 and Realme 7  release date is 2020 September 01. This smartphone comes with single variants like 6/64GB RAM. It is available at one color options like Mist Blue and Mist White. </p>
-          <h3 style="font-weight: 400;">Realme 7 Key features:</h3>
-          <ul class="content">
+          <h2 style="font-weight: 400;">About Realme 7i</h2>
+          <p>Here a lot of leaks have come out about Realme 7i its specification amazes you. Realme 7i smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an	Octa-core (3.09 GHz, Single core, Kryo 585 + 2.42 GHz, Tri core, Kryo 585 + 1.8 GHz, Quad core, Kryo 585) processor and it runs on Qualcomm Snapdragon 662 (11nm). </p>
+          <p>Realme 7i smartphone has an IPS LCD capacitive touchscreen display with 	720 x 1600 pixels screen resolution and 90Hz refresh rate. Talking about its camera, On the front camera, you get a 16-megapixel primary camera and on the rear camera, there is a 64 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixels micro, and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for 18W fast charging and non-removable 5000 mAh battery. </p>
+          <h3 style="font-weight: 400;">Realme 7i price in India.</h3>
+          <p>Realme 7i price in India start from Rs. 15,999 ( Expected Price ) and Realme 7i expected release date is 2020 September 17. This smartphone comes with single variants like 8/128GB RAM. It is available at two color options like 	Blue and Dark Green. </p>
+          <h3 style="font-weight: 400;">Realme 7i Key features:</h3>
+          <ul>
             <li>Diaplay: 6.5 inches</li>
-            <li>Processor: MediaTek Helio G90T</li>
-            <li>primary camera: 64-megapixel + 8-megapixel + 2-megapixel + 2-megapixel</li>
+            <li>Processor: Qualcomm Snapdragon 662 (11 nm)</li>
+            <li>primary camera: 64-MP + 8-MP + 2-MP + 2-MP</li>
             <li>selfie camera: 16-megapixel</li>
             <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
-            <li>Fast charging 30W.</li>
+            <li>18W Fast charging.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Realme 7 specification</h3>
+    <h3 class="spec_title">Realme 7i specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -43,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Released on</strong>
-          <p>2020 September 01</p>
+          <p>2020 September 17</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -67,11 +68,11 @@
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>7</p>
+          <p>7i</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>Mist Blue, Mist White</p>
+          <p>Blue, Dark Green</p>
         </div>
       </div>
     </div>
@@ -119,11 +120,11 @@
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>1080 x 2400 pixels</p>
+          <p>720 x 1600 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
-          <p>	Corning Gorilla Glass 5</p>
+          <p>Corning Gorilla Glass 5</p>
         </div>
       </div>
     </div>
@@ -139,7 +140,7 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>MediaTek Helio G90T</p>
+          <p>Qualcomm Snapdragon 662</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -147,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>Mali-G76 MP4</p>
+          <p>Adreno 610</p>
         </div>
       </div>
     </div>
@@ -163,7 +164,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>6/64GB RAM</p>
+          <p>8/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -203,7 +204,7 @@
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 30W</p>
+          <p>Yes, Fast charging 18W</p>
         </div>
       </div>
     </div>
@@ -227,7 +228,7 @@
         </div>
         <div class="specs_info1">
           <strong>Radio</strong>
-          <p>Unspecified</p>
+          <p>No</p>
         </div>
       </div>
     </div>
@@ -239,7 +240,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint, accelerometer, proximity, compass</p>
+            <p>Fingerprint (back-side), Proximity sensor, Gyroscope,</p>
+        </div>
+        <div class="specs_info">
+          <strong></strong>
+            <p>Accelerometer</p>
         </div>
       </div>
     </div>
@@ -260,7 +265,8 @@
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div class="fb-comments" data-href="https://www.hipein.com/mobile/realme-7i" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
     </div>
   </div>
+
 {% endblock specs%}
