--- a/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus 8t/oneplus-8t.html
@@ -43,7 +43,7 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Realsed on</strong>
+          <strong>Released on</strong>
           <p>2020 November 20</p>
         </div>
         <div class="specs_info">
