--- a/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
@@ -41,7 +41,7 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Realsed on</strong>
+          <strong>Released on</strong>
           <p>04 Aug 2020</p>
         </div>
         <div class="specs_info">
