--- a/limbo/affiliate/templates/mobile/samsung/note 20/note 20.html
+++ b/limbo/affiliate/templates/mobile/samsung/note 20/note 20.html
@@ -43,7 +43,7 @@
       </div>
       <div class="specs_type">
         <div class="specs_info">
-          <strong>Realsed on</strong>
+          <strong>Released on</strong>
           <p>5 august 2020 (Unofficial)</p>
         </div>
         <div class="specs_info">
