samsung galaxy s20 fre

--- a/limbo/affiliate/templates/mobile/samsung/samsung s20 fe/samsung-s20-fe.html
+++ b/limbo/affiliate/templates/mobile/samsung/samsung s20 fe/samsung-s20-fe.html
@@ -11,10 +11,10 @@
       <div class="main">
         <div class="headline2">
           <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy S20 FE  (6/128 GB) price in india, Rumours, specification and features.</h1>
-          <h4 style="font-weight: 400;">Here Rumours comes out  Samsung is about to launch its new smartphone, Samsung Galaxy S20 FE  soon. </h4>
+          <p style="font-weight: 400;">Here Rumours comes out  Samsung is about to launch its new smartphone, Samsung Galaxy S20 FE  soon. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe-2.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" alt="">
         </div>
         <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">MySmartPrice</a></p>
         <div class="info">
