samsung galaxy s20 fre

--- a/limbo/affiliate/templates/mobile/samsung/samsung s20 fe/samsung-s20-fe.html
+++ b/limbo/affiliate/templates/mobile/samsung/samsung s20 fe/samsung-s20-fe.html
@@ -25,12 +25,12 @@
           <p>Samsung Galaxy S20 FE  price in India start from Rs. 24,990 ( Expected Price ) and Samsung Galaxy S20 FE  expected release date is 2020 October 10. This smartphone comes with two variants like 6/128GB RAM and 6/256GB RAM. It is available at six color options like White, Blue, Orange, Lavender, Green, and Red. </p>
           <h3 style="font-weight: 400;">Samsung Galaxy S20 FE  Key features:</h3>
           <ul>
-            <li>Diaplay: 6.67 inches</li>
-            <li>Processor: Qualcomm Snapdragon 865 Plus</li>
-            <li>primary camera: 64-megapixel + 16-megapixel + 8-megapixel</li>
-            <li>selfie camera: 20-megapixel</li>
+            <li>Diaplay: 6.5 inches</li>
+            <li>Processor: Qualcomm SM8250 Snapdragon 865</li>
+            <li>primary camera: 12-megapixel + 12-megapixel + 8-megapixel</li>
+            <li>selfie camera: 32-megapixel</li>
             <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
-            <li>Fast charging.</li>
+            <li>Fast charging 15W.</li>
           </ul>
           <p></p>
         </div>
