--- a/limbo/affiliate/templates/mobile/realme/realme c17/realme-c17.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c17/realme-c17.html
@@ -1,42 +1,42 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Samsung Galaxy S20 FE  price in India start from Rs. 43,990 ( Expected Price ) and Samsung Galaxy S20 FE  expected release date is 2020 October 10. - hipein "> {% endblock desc%}
-{% block key%}<meta name="keywords" content="Samsung Galaxy S20 FE , Samsung Galaxy S20 FE  specification, Samsung Galaxy S20 FE  release date, Samsung Galaxy S20 FE  price, Samsung Galaxy S20 FE  price in india"> {% endblock key%}
+{% block desc%}<meta name="description" content="Realme C17  price in India start from Rs. 12,999 and Realme C17 release date is 2020 September 20. - hipein "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="Realme C17 , Realme C17  specification, Realme C17  release date, Realme C17  price, Realme C17  price in india"> {% endblock key%}
 {% block style %}
 {% endblock style %}
     {% load static %}
-    {% block title%}Samsung Galaxy S20 FE  price in india, Rumours, specification and features - hipein{% endblock title%}
+    {% block title%}Realme C17 price in india, specification and features - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Samsung Galaxy S20 FE  (6/128 GB) price in india, Rumours, specification and features.</h1>
-          <p style="font-weight: 400;">Here Rumours comes out  Samsung is about to launch its new smartphone, Samsung Galaxy S20 FE  soon. </p>
+          <h1 class="content_tittle" style="font-weight: 400;"><span>REVIEW</span> Realme C17  (6/128 GB) price in india, specification and features.</h1>
+          <p>Here Rumours comes out  Realme is about to launch its new smartphone, Realme C17  soon. </p>
         </div>
         <div>
-          <img class="image" src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" alt="">
+          <img class="image" src="{% static 'image/mobile/realme/realme-c17.jpg'%}" alt="">
         </div>
-        <p class="content" style="border-bottom: 1px solid #eee;">Image source | google.com - Uploaded by: <a href="#">MySmartPrice</a></p>
+        <hr class="my-2">
         <div class="info">
-          <h2 style="font-weight: 400;">About Samsung Galaxy S20 FE </h2>
-          <p>Here a lot of leaks have come out about Samsung Galaxy S20 FE  its specification amazes you. Samsung Galaxy S20 FE  smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an	Octa-core (1x2.84 GHz Kryo 585 & 3x2.42 GHz Kryo 585 & 4x1.80 GHz Kryo 585) processor and it runs on Qualcomm SM8250 Snapdragon 865 (7 nm+). </p>
-          <p>Samsung Galaxy S20 FE  smartphone has an Super AMOLED display with 1080 x 2400 pixels screen resolution and 402 PPI pixel density. Talking about its camera, On the front camera, you get a 32-megapixel primary camera and on the rear camera, there is a 12 megapixel wide-angle, 12 megapixels ultra-wide and 8-megapixels telephoto. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for 15W fast charging and non-removable 4500 mAh battery. </p>
-          <h3 style="font-weight: 400;">Samsung Galaxy S20 FE  price in India.</h3>
-          <p>Samsung Galaxy S20 FE  price in India start from Rs. 43,990 ( Expected Price ) and Samsung Galaxy S20 FE  expected release date is 2020 October 10. This smartphone comes with two variants like 6/128GB RAM and 6/256GB RAM. It is available at six color options like White, Blue, Orange, Lavender, Green, and Red. </p>
-          <h3 style="font-weight: 400;">Samsung Galaxy S20 FE  Key features:</h3>
+          <h2 style="font-weight: 400;">About Realme C17 </h2>
+          <p>Realme is going to launch Realme C17 soon, taking its C series one step further. Realme C17  smartphone runs on the latest version of the Android operating system (Android 10). The phone is powered by an Octa-core (4x1.8 GHz Kryo 240 & 4x1.6 GHz Kryo 240) processor and it runs on Qualcomm SM8250 Snapdragon 460 (11 nm). </p>
+          <p>Realme C17  smartphone has an IPS LCD display with 720 x 1600 pixels screen resolution and 402 PPI pixel density. Talking about its camera, On the front camera, you get a 8-megapixel primary camera and on the rear camera, there is a 13 megapixel wide-angle, 8 megapixels ultra-wide, 2-megapixels micro, and 2-megapixels depth. camera with features like Digital Zoom, Auto Flash, Face detection, Touch to focus. It has support for 18W fast charging and non-removable 5000 mAh battery. </p>
+          <h3 style="font-weight: 400;">Realme C17  price in India.</h3>
+          <p>Realme C17  price in India start from Rs. 12,999 and Realme C17 release date is 2020 September 20. This smartphone comes with single variants like 6/128GB RAM. It is available at two color options like Navy Blue and Lake Green. </p>
+          <h3 style="font-weight: 400;">Realme C17  Key features:</h3>
           <ul>
             <li>Diaplay: 6.5 inches</li>
-            <li>Processor: Qualcomm SM8250 Snapdragon 865</li>
-            <li>primary camera: 12-megapixel + 12-megapixel + 8-megapixel</li>
-            <li>selfie camera: 32-megapixel</li>
-            <li>Battery: Non-removable Li-Ion 4500 mAh battery</li>
-            <li>Fast charging 15W.</li>
+            <li>Processor: Qualcomm Snapdragon 460</li>
+            <li>primary camera: 13-megapixel + 8-megapixel + 2-megapixel + 2-megapixel</li>
+            <li>selfie camera: 8-megapixel</li>
+            <li>Battery: Non-removable Li-Ion 5000 mAh battery</li>
+            <li>Fast charging 18W.</li>
           </ul>
           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
-    <h3 class="spec_title">Samsung Galaxy S20 FE  specification</h3>
+    <h3 class="spec_title">Realme C17  specification</h3>
     <div class="specs_table">
       <div class="specs">
         <strong>Available at</strong>
@@ -44,7 +44,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Realsed on</strong>
-          <p>2020 October 10</p>
+          <p>2020 September 20</p>
         </div>
         <div class="specs_info">
           <strong>Amazon</strong>
@@ -64,15 +64,15 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Make</strong>
-          <p>Samsung</p>
+          <p>Realme</p>
         </div>
         <div class="specs_info">
           <strong>Models</strong>
-          <p>S20 FE</p>
+          <p>C17</p>
         </div>
         <div class="specs_info1">
           <strong>Color</strong>
-          <p>White, Blue, Orange, Lavender, Green, Red</p>
+          <p>Navy Blue, Lake Green</p>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
         </div>
         <div class="specs_info">
           <strong>5G</strong>
-          <p>Yes</p>
+          <p>No</p>
         </div>
         <div class="specs_info1">
           <strong>SIM Type</strong>
@@ -112,7 +112,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Screen</strong>
-          <p>Super AMOLED capacitive touchscreen, 16M colors</p>
+          <p>IPS LCD capacitive touchscreen, 16M colors</p>
         </div>
         <div class="specs_info">
           <strong>Size(inch)</strong>
@@ -120,11 +120,11 @@
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>1080 x 2400 pixels</p>
+          <p>720 x 1600 pixels</p>
         </div>
         <div class="specs_info1">
           <strong>Protection</strong>
-          <p>Corning Gorilla Glass 3</p>
+          <p>Corning Gorilla Glass</p>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
         </div>
         <div class="specs_info">
           <strong>Chipset</strong>
-          <p>Qualcomm SM8250 Snapdragon 865 (7 nm+)</p>
+          <p>Qualcomm SM8250 Snapdragon 460 (11 nm)</p>
         </div>
         <div class="specs_info">
           <strong>CPU</strong>
@@ -148,7 +148,7 @@
         </div>
         <div class="specs_info1">
           <strong>Graphics</strong>
-          <p>Adreno 650</p>
+          <p>Adreno 610</p>
         </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
         </div>
         <div class="specs_info1">
           <strong>Internal</strong>
-          <p>6/128GB RAM, 6/256GB RAM</p>
+          <p>6/128GB RAM</p>
         </div>
       </div>
     </div>
@@ -176,11 +176,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Rear Type </strong>
-          <p>Triple</p>
+          <p>Quad</p>
         </div>
         <div class="specs_info">
           <strong>Resolution</strong>
-          <p>12-MP + 12-MP + 8-MP</p>
+          <p>13-MP + 8-MP + 2-MP + 2-MP</p>
         </div>
         <div class="specs_info">
           <strong>Front Type</strong>
@@ -188,7 +188,7 @@
         </div>
         <div class="specs_info">
           <strong>Front camera</strong>
-          <p>32-megapixel</p>
+          <p>8-megapixel</p>
         </div>
       </div>
     </div>
@@ -200,11 +200,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong></strong>
-          <p>Li-Po 4500 mAh, non-removable</p>
+          <p>Li-Po 5000 mAh, non-removable</p>
         </div>
         <div class="specs_info">
           <strong>Charging</strong>
-          <p>Yes, Fast charging 15W</p>
+          <p>Yes, Fast charging 18W</p>
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>WLAN</strong>
-          <p>Wi-Fi 802.11 a/b/g/n/ac/6, dual-band, Wi-Fi Direct, hotspot</p>
+          <p>Wi-Fi 802.11 a/b/g/n/ac, dual-band, Wi-Fi Direct, hotspot</p>
         </div>
         <div class="specs_info">
           <strong>Bluetooth</strong>
@@ -228,7 +228,7 @@
         </div>
         <div class="specs_info1">
           <strong>Radio</strong>
-          <p>Unspecified</p>
+          <p>Yes</p>
         </div>
       </div>
     </div>
@@ -240,11 +240,11 @@
       <div class="specs_type">
         <div class="specs_info">
           <strong>Sensors</strong>
-            <p>Fingerprint(under display), accelerometer, gyro, compass,</p>
+            <p>Fingerprint (rear-mounted), accelerometer, proximity,</p>
         </div>
         <div class="specs_info">
           <strong></strong>
-            <p>proximity, Bixby natural language commands and dictation</p>
+            <p>compass</p>
         </div>
       </div>
     </div>
@@ -265,8 +265,7 @@
       </div>
     </div>
     <div class="comment">
-      <div class="fb-comments" data-href="https://www.hipein.com/mobile/samsung-galaxy-s20-fe" data-order-by="social" data-numposts="100" data-width="100%" style="display:block;"></div>
+      <div style="background: white;" class="fb-comments" data-href="https://www.hipein.com/mobile/realme-c17" data-numposts="5" data-width=""></div>
     </div>
   </div>
-
 {% endblock specs%}
