--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -215,6 +215,48 @@
         </div>
       </div>
     </div>
+    <!-- 2 -->
+    <div class="card-group">
+      <div class="card">
+        <a href="{% url 'narzo20pro' %}"><img src="{% static 'image/mobile/realme/narzo-20-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> Realme Narzo 20 Pro : 6/64GB Read Full review</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>What can be the price of Realme Narzo 20 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>When can Realme Narzo 20 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <a href="{% url 's20fe' %}"><img src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> Samsung Galaxy S20 FE : 6/128GB  Read Full review.</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>What can be the price of Samsung Galaxy S20 FE in India?</b></p></a></li>
+            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>When can Samsung Galaxy S20 FE be released in India?</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <a href="{% url 'mi10tpro' %}"><img src="{% static 'image/mobile/mi/mi-10t-pro-2.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> Xiaomi Mi 10T Pro : 8/128GB Read Full review</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>What can be the price of Xiaomi Mi 10T Pro in India?</b></p></a></li>
+            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>When can Xiaomi Mi 10T Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <!-- main page content -->
     <div class="main">
       <h2 class="heading">Mobiles</h2>
