--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -231,7 +231,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 's20fe' %}"><img src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 's20fe' %}"><img style="height: 350px" src="{% static 'image/mobile/samsung/samsung-galaxy-s20-fe.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
           <h4><span>REVIEW</span> Samsung Galaxy S20 FE : 6/128GB  Read Full review.</h4>
         </div></a>
