--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -224,8 +224,8 @@
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>What can be the price of Realme Narzo 20 Pro in India?</b></p></a></li>
-            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>When can Realme Narzo 20 Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>What can be the price of Narzo 20 Pro in India?</b></p></a></li>
+            <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>When can Narzo 20 Pro be released in India?</b></p></a></li>
             <li><a href="{% url 'narzo20pro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
@@ -237,9 +237,9 @@
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>What can be the price of Samsung Galaxy S20 FE in India?</b></p></a></li>
+            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>What can be the price of Galaxy S20 FE in India?</b></p></a></li>
+            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>When can Galaxy S20 FE be released in India?</b></p></a></li>
             <li><a href="{% url 's20fe' %}"><p class="card-text"><b>Full specification</b></p></a></li>
-            <li><a href="{% url 's20fe' %}"><p class="card-text"><b>When can Samsung Galaxy S20 FE be released in India?</b></p></a></li>
           </ul>
         </div>
       </div>
@@ -250,8 +250,8 @@
         </div></a>
         <div class="card-body card-body1">
           <ul>
-            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>What can be the price of Xiaomi Mi 10T Pro in India?</b></p></a></li>
-            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>When can Xiaomi Mi 10T Pro be released in India?</b></p></a></li>
+            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>What can be the price of Mi 10T Pro in India?</b></p></a></li>
+            <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>When can Mi 10T Pro be released in India?</b></p></a></li>
             <li><a href="{% url 'mi10tpro' %}"><p class="card-text"><b>Full specification</b></p></a></li>
           </ul>
         </div>
