--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -35,7 +35,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     {% block style %} {% endblock style %}
     <style>
-      .comment{background: white;width: 70%;}p{font-size: 17px;}.search_bar{width: 100%;display: flex;height: 55px;border: 1px solid;position: relative;margin-bottom: 1rem;border: 1px solid transparent;background: #0984e3;color: white;}.alert{flex: 2;}#srh{margin-top: 9px;margin-right: 10px;float: right;}#srh input{width: 410px;height: 35px;border: 1px solid #0984e3;border-radius: 2px;padding: 0 0 2px 10px;}#srh button{width: 80px;height: 33px;color: #fff;background-color: #0984e3;border: 1px solid #fff;border-radius: 2px;padding-bottom: 2px;}#srh button:hover{color: #fff;border: 1px solid #fff;}span{color: red;}.samrush{width: 100%;}.sidebar{top:142px;}.aff-link1{display: flex;}.aff-link1 button{width: 300px;margin-left: 30px;}.aff-link1{margin-top: 20px;}.headline{height: 100px;}.aside{width: 100%;padding-left: 10px;}.aside h4{border-bottom: 1px solid #eee;color: gray;}.badge a:hover{text-decoration: none;}.Categories{margin-left: 240px;font-weight: 500;}.social {padding: 20px;font-size: 20px;width: 60px;text-align: center;text-decoration: none;}.social:hover {color: white;text-decoration: none;}.social-fb {background: #3B5998;color: white;}.social-twit {background: #55ACEE;color: white;margin-left: 10px;}.social-insta{background: #dd4b39;color: white;margin-left: 10px;}.Category{padding-top: 20px;}.cat-link{padding-top: 10px;}.cat-link a:hover{text-decoration: none;background-color:#007bff;color: white}.cat1{border: 1px solid; padding: 4px 15px;text-decoration: none;border-radius: 10px;}.cat2{border: 1px solid;padding: 4px 8px;margin-left: 10px;text-decoration: none;border-radius: 10px;}.cat3{border: 1px solid;padding: 4px 14px;margin-left: 10px;text-decoration: none;border-radius: 10px;}
+      .comment{background: white;width: 70%;}p{font-size: 17px;}.search_bar{width: 100%;display: flex;height: 55px;border: 1px solid;position: relative;margin-bottom: 1rem;border: 1px solid transparent;background: #0984e3;color: white;}.alert{flex: 2;}#srh{margin-top: 9px;margin-right: 10px;float: right;}#srh input{width: 410px;height: 35px;border: 1px solid #0984e3;border-radius: 2px;padding: 0 0 2px 10px;}#srh button{width: 80px;height: 33px;color: #fff;background-color: #0984e3;border: 1px solid #fff;border-radius: 2px;padding-bottom: 2px;}#srh button:hover{color: #fff;border: 1px solid #fff;}span{color: red;}.samrush{width: 100%;}.sidebar{top:142px;}.aff-link1{display: flex;}.aff-link1 button{width: 300px;margin-left: 30px;}.aff-link1{margin-top: 20px;}.headline{height: 100px;}.aside{width: 100%;padding-left: 10px;}.aside h4{border-bottom: 1px solid #eee;color: gray;}.badge a:hover{text-decoration: none;}.Categories{margin-left: 240px;font-weight: 500;}.social {padding: 20px;font-size: 20px;width: 60px;text-align: center;text-decoration: none;}.social:hover {color: white;text-decoration: none;}.social-fb {background: #3B5998;color: white;}.social-twit {background: #55ACEE;color: white;margin-left: 10px;}.social-insta{background: #dd4b39;color: white;margin-left: 10px;}.Category{padding-top: 20px;}.cat-link{padding-top: 10px;}.cat-link a:hover{text-decoration: none;background-color:#007bff;color: white}.cat1{border: 1px solid; padding: 4px 15px;text-decoration: none;border-radius: 10px;}.cat2{border: 1px solid;padding: 4px 8px;margin-left: 10px;text-decoration: none;border-radius: 10px;}.cat3{border: 1px solid;padding: 4px 14px;margin-left: 10px;text-decoration: none;border-radius: 10px;}.card-group{width: 80%;margin-left: 150px;margin-bottom: 30px;text-decoration: none;}.card-img-top{border-radius: 5px;filter: brightness(0.7);}.card-group a{text-decoration: none;color: black;}.card-group a:hover{color: blue;}.image-text{position: absolute;bottom: 30%;left: 6px;}.image-text h4{color: white;font-weight: 700;}.image-text1{position: absolute;bottom: 44%;left: 6px;}.image-text1 h4{color: white;font-weight: 700;}span{color: red;}.card-body1{margin-left: -13px;padding: 5px;}.card a:hover{color: red;}.card-text1{padding: 5px;}.bottom-left {position: absolute;top: 99%;}
       @media (max-width: 1200px){.alert{flex: 1;}#srh{position: relative;margin-left: 0px;width: 50%;}#srh input{width: 82%;}#srh button{margin-left: 5px;}button{width: 300px;}.affilated-link_flipcart{margin-left:30px;}.aside{width: 43%;}}
       @media (max-width: 768px){.comment{margin-top: 10px;width: 100%;}p{font-size: 18px;}.content{font-size: 18px;}ul{margin-left: -10px;}li{font-size: 17px;}footer p{font-size: 14px;}.alert{display: none;}#srh{width: 97%;left: 10px;}#srh input{width: 75%;}#srh button{margin-left: 2px;}.aff-link1 button{width: 90%;margin-left: 0;margin-top: 10px;}.aff-link1{flex-direction: column;}.affilated-link_flipcart{margin-left: 0;}.aside{width: 100%;}.Categories{margin-left: 140px;}}
       @media (max-width: 640px){#srh{width: 100%;margin-left: 5px;}#srh input{width: 73%;}}
@@ -139,7 +139,51 @@
       </div>
     </div>
     {% block specs%}  {% endblock specs%}
-
+    <div class="main">
+      <h2 class="heading">Most Popular</h2>
+    </div>
+    <!-- content -->
+    <div class="card-group">
+      <div class="card">
+        <a href="{% url 'pococ3' %}"><img src="{% static 'image/article/mobile/upcoming mobile/poco-c3.jpg'%}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> POCO C3 : 3/32GB  Read Full review.</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>What can be the price of POCO C3 in India?</b></p></a></li>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>When can POCO C3 be released in India?</b></p></a></li>
+            <li><a href="{% url 'pococ3' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <a href="{% url 'OnePlus_nord' %}"><img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> onePlus nord 5G : 6/64GB Read Full review</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>What can be the price of onePlus nord in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>When can onePlus nord be released in India?</b></p></a></li>
+            <li><a href="{% url 'OnePlus_nord' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="card">
+        <a href="{% url 'note20ultra' %}"><img src="{% static 'image/article/mobile/upcoming mobile/samsung-galaxy-note-20-ultra.jpg'%}"  class="card-img-top" alt="...">
+        <div class="image-text">
+          <h4><span>REVIEW</span> Galaxy Note 20 ultra : 8/256GB Read Full review</h4>
+        </div></a>
+        <div class="card-body card-body1">
+          <ul>
+            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>What can be the price of Note 20 ultra in India?</b></p></a></li>
+            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>When can Note 20 ultra be released in India?</b></p></a></li>
+            <li><a href="{% url 'note20ultra' %}"><p class="card-text"><b>Full specification</b></p></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="footer_info">
         <a href="{% url 'home' %}"><img style="width: 150px; margin-left: -13px;" src="{% static 'image/logo/logo.png'%}" alt=""></a>
