--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -147,8 +147,11 @@
         </a>
       </div>
     </div>
-    <!-- quick links -->
     <div class="quick-link">
+      <iframe src="https://widget.crictimes.org/" style="width:100%;min-height: 450px; border: 0;" scrolling="yes"></iframe>
+    </div>
+    <!-- quick links -->
+    <!-- <div class="quick-link">
       <div class="link1 shadow">
         <a class="row1" href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
       </div>
@@ -166,7 +169,7 @@
       <div class="link5 shadow">
         <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
       </div>
-    </div>
+    </div> -->
     <!-- heading -->
     <div class="main">
       <h2 class="heading">upcoming</h2>
