--- a/limbo/affiliate/templates/blog/apps/hipein app/hipein-app.html
+++ b/limbo/affiliate/templates/blog/apps/hipein app/hipein-app.html
@@ -31,8 +31,7 @@
           font-size: 16px;
         }
         .aff-link2{
-          top: 117%;
-          left: 10%;
+          display: none;
         }
       }
     </style>
