--- a/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
+++ b/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
@@ -33,7 +33,7 @@
           <p><b>Chennai Super Kings:</b></p>
           <p>Shane Watson, Faf du Plessis, Ambati Rayudu, MS Dhoni, Kedar Jadhav, M Vijay, Sam Curran, Ravindra Jadeja, Piyush Chawla, L Ngidi, Deepak Chahar</p>
           <p><b>Rajesthan Royals:</b></p>
-          <p> Robin Uthappa, Yashasvi Jaiswal, Sanju Samson(w), David Miller, Steven Smith(c), Riyan Parag, Shreyas Gopal, Tom Curran, Jofra Archer, Jaydev Unadkat.</p>
+          <p>Yashasvi Jaiswal, Robin Uthappa, Steve Smith (c), David Miller, Sanju Samson (wk), Tom Curran, Riyan Parag, Shreyas Gopal, Jofra Archer, Jaydev Unadkat, Ankit Rajpoot/Varun Aaron/Kartik Tyagi.</p>
           <hr class="my-2">
         </div>
 
