--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="{% url 'pococ3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
+        <a href="{% url 'pocox3' %}"><img src="{% static 'image/mobile/mi/poco-x3-2.jpg'%}" class="card-img-top" alt="...">
         <div class="image-text">
           <h4><span>REVIEW</span> POCO X3 : 3/32GB  Read Full review.</h4>
         </div></a>
