--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -366,13 +366,15 @@
         position: relative;
         margin-left: 0px;
         width: 50%;
+        display: flex;
       }
       #srh input{
         width: 82%;
       }
       #srh button{
-        margin-left: 5px;
+        margin-left: 10px;
       }
+
       .offer{
         width: 100%;
         margin: 20px 0;
