--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -100,12 +100,13 @@
         position: relative;
         margin-left: 0px;
         width: 50%;
+        display: flex;
       }
       #srh input{
         width: 82%;
       }
       #srh button{
-        margin-left: 5px;
+        margin-left: 10px;
       }
       .offer{
         width: 100%;
