--- a/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
+++ b/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
@@ -12,9 +12,6 @@
           <h1 class="content_tittle" style="font-weight: 700;" >IPL 2020, RR vs CSK Predicted Playing 11: Dream 11 prediction.</h1>
           <h5 style="font-weight: 400;">Chennai Super Kings have won a match against Dehli Capitals and it is going to be a first match of Rajesthan Royals against chennai.</h5>
           <hr class="my-2">
-          <style>
-
-          </style>
           <div class="">
           <img class="image" src="{% static 'image/article/game/IPL/cskvsrr.jpg'%}" alt="">
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google uploaded by:  <a href="#">asianetnews.com</a></p>
@@ -35,6 +32,31 @@
           <p><b>Rajesthan Royals:</b></p>
           <p>Yashasvi Jaiswal, Robin Uthappa, Steve Smith (c), David Miller, Sanju Samson (wk), Tom Curran, Riyan Parag, Shreyas Gopal, Jofra Archer, Jaydev Unadkat, Ankit Rajpoot/Varun Aaron/Kartik Tyagi.</p>
           <hr class="my-2">
+          <img class="image" src="{% static 'image/article/game/IPL/dream11.jpg'%}" alt="">
+          <p></p>
+          <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Playing XIs (CSK vs RR):</h3>
+          <p><b>Chennai Super Kings:</b></p>
+          <p>Shane Watson, Faf du Plessis, Ambati Rayudu, MS Dhoni, Kedar Jadhav, M Vijay, Sam Curran, Ravindra Jadeja, Piyush Chawla, L Ngidi, Deepak Chahar</p>
+          <p><b>Rajesthan Royals:</b></p>
+          <p> Robin Uthappa, Yashasvi Jaiswal, Sanju Samson(w), David Miller, Steven Smith(c), Riyan Parag, Shreyas Gopal, Tom Curran, Jofra Archer, Jaydev Unadkat.</p>
+          <hr class="my-2">
+          <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Dream11 Prediction</h3>
+          <p><b>Wicket Keeper:</b> Sanju Samson (vc)</p>
+          <p><b>Batsmen:</b> Shane Watson(c), Ambati Rayudu, F. Du Plessis, Steven Smith, David Miller, Yashasvi Jaiswal.</p>
+          <p><b>AR:</b> Ravindra Jadeja</p>
+          <p><b>Bowler:</b> L Ngidi, Shreyas Gopal, Jofra Archer</p>
+          <img class="image1" src="{% static 'image/article/game/IPL/1.jpg'%}" alt="">
+          <p></p>
+          <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Which contest would be best to participate</h3>
+          <p>According to me you should participate in the "winner take all" contest of Rs 77. The winning price of this contest is Rs 200, in which 3 players can participate and you can get 33% probability of winning. I have won a lot of money by using this trick, you can also win.</p>
+          <p>In just three day i have won Rs.1200 approx and I can show you my winning stats.</p>
+          <img class="image1" src="{% static 'image/article/game/IPL/2.jpg'%}" alt="">
+          <p></p>
+          <p>You can also win, you just have to check the Dream 11 Predictions on this page. For more accurate prediction, check this page 15 minutes before the match starts.</p>
+          <img class="image1" src="{% static 'image/article/game/IPL/3.jpg'%}" alt="">
+          <p></p>
+          <p>I participate in 2 to 3 competitions which increases the chances of profit and if 3 out of 2 win, it is profit. If you win 3 matches, then you will earn a profit of 600 rupees.</p>
+          <p></p>
         </div>
 
       </div>
