--- a/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
+++ b/limbo/affiliate/templates/blog/game/IPL/cssvsrr.html
@@ -5,6 +5,38 @@
     {% block title%}IPL 2020, RR vs CSK Predicted Playing 11: Dream 11 prediction.{% endblock title%}
     {% block actart%} class="active"{% endblock actart%}
     {% block content%}
+    <style>
+      pre{
+        font-family: sans-serif ;
+        font-size: 16px;
+      }
+      p{
+        font-family: sans-serif ;
+        font-size: 17px;
+      }
+      .image1{
+        width: 250px;
+        height: 500px;
+        margin-left: 250px;
+        border: 1px solid;
+      }
+      @media (max-width: 1200px){
+        .image1{
+        margin-left: 350px;
+        }
+      }
+      @media (max-width: 768px){
+        p{
+          font-size: 19px;
+        }
+        footer p{
+          font-size: 16px;
+        }
+        .image1{
+          margin-left: 50px;
+        }
+      }
+    </style>
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
