--- a/limbo/affiliate/templates/page/base.html
+++ b/limbo/affiliate/templates/page/base.html
@@ -446,6 +446,7 @@
         }
         #srh input{
           width: 75%;
+          margin-top: 4px;
         }
         #srh button{
           margin-left: 2px;
