--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -129,6 +129,7 @@
         }
         #srh input{
           width: 75%;
+          margin-top: 4px;
         }
         #srh button{
           margin-left: 2px;
