--- a/limbo/affiliate/templates/blog/game/IPL/kkrvsmi.html
+++ b/limbo/affiliate/templates/blog/game/IPL/kkrvsmi.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Today Mumbai Indians take on Kolkata Knigh Riders in Match 5 of IPL 2020 and The match will be played at the Sheikh Zayed Stadium in Abu Dhabi."> {% endblock desc%}
+{% block desc%}<meta name="description" content="Today Mumbai Indians take on Kolkata Knight Riders  in Match 5 of IPL 2020 and The match will be played at the Sheikh Zayed Stadium in Abu Dhabi."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="KKR vs MI, MI vs KKR, MI vs KKR Dream 11, KKR vs MI Dream 11"> {% endblock key%}
     {% load static %}
     {% block title%}IPL 2020, KKR vs MI Predicted Playing 11: Dream 11 prediction.{% endblock title%}
@@ -42,12 +42,12 @@
       <div class="main">
         <div class="headline2">
           <h1 class="content_tittle" style="font-weight: 700;" >IPL 2020, KKR vs MI  Predicted Playing 11: Dream 11 prediction.</h1>
-          <h5 style="font-weight: 400;">Mumbai Indians  have loss a match against Chennai Super Kings and it is going to be a first match of Kolkata Knigh Riders  against Mumbai.</h5>
+          <h5 style="font-weight: 400;">Mumbai Indians  have loss a match against Chennai Super Kings and it is going to be a first match of Kolkata Knight Riders   against Mumbai.</h5>
           <hr class="my-2">
           <div class="">
           <img class="image" src="{% static 'image/article/game/IPL/kkrvsmi.jpg'%}" alt="">
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google uploaded by:  <a href="#">IPLT20.com</a></p>
-          <p>Today Mumbai Indians take on Kolkata Knigh Riders in Match 5 of IPL 2020 and The match will be played at the Sheikh Zayed Stadium in Abu Dhabi.</p>
+          <p>Today Mumbai Indians take on Kolkata Knight Riders  in Match 5 of IPL 2020 and The match will be played at the Sheikh Zayed Stadium in Abu Dhabi.</p>
           <p>The match will start at <b>19:30 IST</b> (14:00 GMT), 18:00 LOCAL.</p>
           <hr class="my-2">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Sheikh Zayed Stadium  pitch report</h3>
@@ -56,12 +56,12 @@
           <hr class="my-2">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Full Squads:</h3>
           <p><b>Mumbai Indians </b> Squad: Rohit Sharma(c), Quinton de Kock(w), Suryakumar Yadav, Saurabh Tiwary, Hardik Pandya, Kieron Pollard, Krunal Pandya, James Pattinson, Rahul Chahar, Trent Boult, Jasprit Bumrah, Chris Lynn, Aditya Tare, Dhawal Kulkarni, Mitchell McClenaghan, Nathan Coulter-Nile, Jayant Yadav, Ishan Kishan, Anmolpreet Singh, Anukul Roy, Mohsin Khan, Sherfane Rutherford, Digvijay Deshmukh, Prince Balwant Rai.</p>
-          <p><b>Kolkata Knigh Riders </b> Squad: Shubman Gill, Sunil Narine, Nitish Rana, Eoin Morgan, Dinesh Karthik(w/c), Andre Russell, Pat Cummins, Kuldeep Yadav, Shivam Mavi, Kamlesh Nagarkoti, Prasidh Krishna, Rahul Tripathi, Siddhesh Lad, Sandeep Warrier, Nikhil Naik, Chris Green, Lockie Ferguson, Rinku Singh, Ali Khan, Tom Banton, Varun Chakravarthy, Manimaran Siddharth. </p>
+          <p><b>Kolkata Knight Riders  </b> Squad: Shubman Gill, Sunil Narine, Nitish Rana, Eoin Morgan, Dinesh Karthik(w/c), Andre Russell, Pat Cummins, Kuldeep Yadav, Shivam Mavi, Kamlesh Nagarkoti, Prasidh Krishna, Rahul Tripathi, Siddhesh Lad, Sandeep Warrier, Nikhil Naik, Chris Green, Lockie Ferguson, Rinku Singh, Ali Khan, Tom Banton, Varun Chakravarthy, Manimaran Siddharth. </p>
           <hr class="my-2">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Playing XIs (CSK vs RR):</h3>
           <p><b>Mumbai Indians :</b></p>
           <p>Rohit Sharma (c), Quinton de Kock (wk), Suryakumar Yadav, Saurabh Tiwary/Ishan Kishan, Hardik Pandya, Kieron Pollard, Krunal Pandya, Nathan Coulter-Nile/James Pattinson, Rahul Chahar, Trent Boult, Jasprit Bumrah.</p>
-          <p><b>Kolkata Knigh Riders :</b></p>
+          <p><b>Kolkata Knight Riders  :</b></p>
           <p> Sunil Narine, Shubman Gill, Nitish Rana, Eoin Morgan, Andre Russell, Dinesh Karthik (c,wk), Pat Cummins, Kuldeep Yadav, Kamlesh Nagarkoti/Sandeep Warrier, Shivam Mavi, Prasidh Krishna.</p>
           <hr class="my-2">
           <h3 style="padding-left:3px; border-left: 3px solid red; font-weight: 500;">Dream11 Prediction</h3>
